# jupyter-videochat

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.cfg  setup.py  tsconfig.json
.github/: requirements.txt
.github/workflows/: build.yml  ci.yml
binder/: environment.yml  jupyter_config.json  jupyter_notebook_config.json  labextensions.txt  overrides.json  postBuild  requirements.txt
docs/: conf.py  environment.yml  index.md  jupyter-lite.json  jupyter_lite_config.json  requirements.txt
docs/_templates/: demo.html  navbar-logo.html
jupyter-config/jupyter_notebook_config.d/: jupyter_videochat.json
jupyter-config/jupyter_server_config.d/: jupyter_videochat.json
jupyter_videochat/: __init__.py  _version.py  handlers.py
schema/: plugin.json
src/: icons.ts  index.ts  jupyter-videochat.ts  manager.ts  plugin.ts  rooms-server.ts  sidebar.tsx  tokens.ts  types.ts  typings.d.ts  widget.tsx
src/components/: JitsiMeet.tsx  PublicRooms.tsx  RoomsList.tsx  ServerRooms.tsx  VideoChat.tsx
src/widgets/: title.tsx
style/: index.css  retro.css  rooms.css
