[metadata]
name = jupyter-videochat
project_urls =
    Source Code = https://github.com/jupyterlab-contrib/jupyter-videochat
long_description = file: ./README.md
long_description_content_type = text/markdown
license_file = LICENSE
keywords =
    Jupyter
    JupyterLab
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Jupyter

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlab ==3.*
    escapism
