[metadata]
name = jupyter-videochat
project_urls =
    Source Code = https://github.com/jupyterlab-contrib/jupyter-videochat
long_description = file: ./README.md
long_description_content_type = text/markdown
license_file = LICENSE
keywords =
    Jupyter
    JupyterLab
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyter_server
    escapism

[options.extras_require]
lab =
    jupyterlab==3.*

lint =
    %(lab)s
    isort
    black==22.3.0

docs =
    %(lab)s
    ipywidgets
    jupyterlite ==0.1.0b4
    myst-nb
    pydata-sphinx-theme
    pytest-check-links
    retrolab >=0.3.20
    sphinx
    sphinx-jsonschema
